lexer_parser/src/test/exempleFile/miniJaja/success/writeBool.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du write/writeln	*/
/************************/

class writeBool {

	main {
        boolean x = true;
        write(x);
        writeln(x);

	}
}