lexer_parser/src/test/exempleFile/miniJaja/fail/writeArray.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du write/writeln	*/
/************************/

class writeArray {

	main {
        write(x[]);
        writeln(x[]);

	}
}